Fixed the issue pointed out by Joel where if the the browser window was shrunk, there was a breakpoint where the main text of the about me page would run to the right and not be fully visible.

--- a/assets/css/customized.css
+++ b/assets/css/customized.css
@@ -81,4 +81,8 @@ footer{
         position: static;
         top: 0;
     }
+
+    .about{
+        width: 100%;
+    }
 }
